# TSMC2025

./: README.md
partial synchronization/: README.md
partial synchronization/gen3/: README.md
partial synchronization/gen3/control/: CMakeLists.txt  package.xml
partial synchronization/gen3/control/include/: common.hpp  manipulator.hpp
partial synchronization/gen3/control/src/: common.cpp  control.cpp  manipulator.cpp
partial synchronization/ur3/: CMakeLists.txt  calibration.yaml
partial synchronization/ur3/include/: common.hpp  manipulator.hpp
partial synchronization/ur3/src/: common.cpp  control.cpp  manipulator.cpp
partial synchronization/ur3e/: CMakeLists.txt  calibration.yaml
partial synchronization/ur3e/include/: common.hpp  manipulator.hpp
partial synchronization/ur3e/src/: common.cpp  control.cpp  manipulator.cpp
shared control/autonomous/gen3/include/: common.hpp  manipulator.hpp
shared control/autonomous/gen3/src/: common.cpp  control.cpp  manipulator.cpp
shared control/autonomous/ur3/include/: common.hpp  manipulator.hpp
shared control/autonomous/ur3/src/: common.cpp  control.cpp  manipulator.cpp
shared control/teleoperation/gen3/: CMakeLists.txt
shared control/teleoperation/gen3/include/: common.hpp  manipulator.hpp
shared control/teleoperation/gen3/src/: common.cpp  control.cpp  manipulator.cpp
shared control/teleoperation/ur3/: CMakeLists.txt
shared control/teleoperation/ur3/include/: common.hpp  manipulator.hpp
shared control/teleoperation/ur3/src/: common.cpp  control.cpp  manipulator.cpp
